feat: Add Accept header support to ViewDefinition $run operation
The _format parameter remains optional and overrides the Accept header
when provided. Adds fromAcceptHeader() method to ViewOutputFormat with
quality value support. Refactors tests to use parameterized tests and
improved AssertJ assertions.